--- a/ShopTemplate/Views/User/PostRegisterUser.cshtml
+++ b/ShopTemplate/Views/User/PostRegisterUser.cshtml
@@ -1,48 +1,113 @@
 ﻿@{
-    ViewData["Title"] = "Enter Details";
+    ViewData["Title"] = "Shopivana | Enter Details";
 }
-<div>
-    <div class="d-flex flex-column flex-root" id="kt_body1">
-        <div class="d-flex flex-column flex-lg-row flex-column-fluid">
-            <div class="d-flex flex-column flex-lg-row-fluid py-10 gradient-bg" style="flex: 1 auto; min-width: 0;">
-                <div class="d-flex flex-center flex-column flex-column-fluid">
-                    <div class="w-lg-400px p-10 p-lg-10 mx-auto bg-white no-auth" style="border-radius: 8px;">
-                        <form class="form w-100 fv-plugins-bootstrap5 fv-plugins-framework" method="post" id="kt_sign_up_form" asp-action="SaveRegisterUser">
-                            <div class="mb-5">
-                                <a href="https://shopivana.com" target="_blank" class="pb-10 d-block">
-                                    <img alt="Logo" src="https://app.shopivana.com/Content/images/logo_default_dark.png?1.0.2.4" class="h-60px">
-                                </a>
-                                <p class="text-dark mb-5 fs-1">Sign Up</p>
-                                <p class="text-gray-700 mb-0">Sign Up to Shopivana for free.</p>
-                            </div>
-                            <div class="mb-5">
-                                <div class="mb-5 fv-plugins-icon-container">
-                                    <label class="position-relative w-100">
-                                        <input type="text" class="input__field no-auth-input" id="Name" name="Name" autocomplete="off" placeholder=" " readonly onfocus="$(this).removeAttr('readonly');" onblur="$(this).attr('readonly');" onchange="    return validateNameField();"/>
-                                        <span class="input__label">Name</span>
-                                    </label>
-                                    <div class="fv-plugins-message-container invalid-feedback" id="namefeedback">
 
-                                    </div>
-                                </div>
-                            </div>
-                            
-                            <div class="text-left">
-                                <button type="button" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 my-4" onclick = "    return submitForm();">
-                                    <span class="indicator-label" id="finishButton">Finish</span>
-                                    
-                                </button>
-                            </div>
-                            <div class="text-center">
-                           <a asp-controller="User" asp-action="SignOut">Sign Out</a>
-                            </div>
-                        </form>
+<body id="kt_body" class="bg-body">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SRRMXB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <!--begin::Main-->
+    <div class="d-flex flex-column flex-root" id="kt_body1">
+        <!--begin::Authentication - Sign-in -->
+        <div class="d-flex flex-column flex-lg-row flex-column-fluid">
+            <!--begin::Aside-->
+            <div class="d-flex flex-column flex-lg-row-auto w-xl-600px positon-xl-relative d-none" style="background-color: #eef3f7;">
+                <!--begin::Wrapper-->
+                <div class="d-flex flex-column position-xl-fixed top-0 bottom-0 w-xl-600px scroll-y">
+                    <!--begin::Content-->
+                    <div class="d-flex flex-row-fluid flex-column text-center p-10 pt-lg-20">
+                        <!--begin::Logo-->
+                        <a href="https://shopivana.com" target="_blank" class="py-9 mb-5">
+                            <img alt="Logo" src="https://app.shopivana.com/Content/images/logo_default_dark.png?1.0.2.4" class="h-100px" />
+                        </a>
+                        <!--end::Logo-->
+                        <!--begin::Title-->
+                        <h1 class="fw-bolder fs-2qx pb-5 pb-md-10" style="color: #444;">Welcome to Shopivana</h1>
+                        <!--end::Title-->
+
                     </div>
+                    <!--end::Content-->
+                    <!--begin::Illustration-->
+                    <div class="d-flex flex-row-auto bgi-no-repeat bgi-position-x-center bgi-size-contain bgi-position-y-bottom min-h-100px min-h-lg-350px" style="background-image: url('')"></div>
+                    <!--end::Illustration-->
                 </div>
+                <!--end::Wrapper-->
             </div>
+            <!--end::Aside-->
+            <!--begin::Body-->
+            <div class="d-flex flex-column flex-lg-row-fluid py-10 gradient-bg" style="flex: 1 auto; min-width: 0;">
+                <!--begin::Content-->
+                <div class="d-flex flex-center flex-column flex-column-fluid">
+                    <!--begin::Wrapper-->
+                    <div class="w-lg-400px p-10 p-lg-10 mx-auto bg-white no-auth" style="border-radius: 8px;width:90%;">
+                        
+<!--begin::Form-->
+<form class="form w-100" novalidate="novalidate" method="post" id="kt_sign_up_form" asp-action="SaveRegisterUser">
+    <input name="__RequestVerificationToken" type="hidden" value="pZnCd-FFgsLubHmdF1HZAkIX__zdZOzfJtcwkPllpVdW4oxguu0j_l4Rq2uG2fyusBYU8P-QFzGNayZjqa-5uL-DKygmsLW3fy2DPNyUu6UEdSiilvrmH-DX65ZzPLGJMw798K4HAqR9qpqkYpyqlw2" />
+    <!--begin::Heading-->
+    <div class="mb-5">
+        <a href="https://shopivana.com" target="_blank" class="pb-10 d-block">
+            <img alt="Logo" src="https://app.shopivana.com/Content/images/logo_default_dark.png?1.0.2.4" class="h-60px">
+        </a>
+        <p class="text-dark mb-5 fs-1">Enter Details</p>
+        
+    </div>
+    <!--begin::Heading-->
+    <!--begin::Input group-->
+    
+    <div class="fv-row mb-7">
+        <label class="position-relative w-100">
+            <input type="text" class="input__field no-auth-input" id="Name" name="Name" autocomplete="off" placeholder=" " readonly onfocus="$(this).removeAttr('readonly');" onblur="$(this).attr('readonly');" onchange="    return validateNameField();"/>
+            <span class="input__label">Your Name</span>
+        </label>
+        <div class="fv-plugins-message-container invalid-feedback" id="namefeedback">
+
         </div>
     </div>
-</div>
+    <!--end::Input group-->
+    
+    <!--begin::Actions-->
+    <div class="text-left">
+        <!--begin::Submit button-->
+        
+        <button type="button" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 my-4" disabled onclick = "    return submitForm();">
+            <span class="indicator-label">Continue</span>
+            <span class="indicator-progress">
+                Please wait...
+                <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+            </span>
+        </button>
+    </div>
+    <!--end::Actions-->
+</form>
+<form asp-controller="User" asp-action="SignOut" method="post">
+    <button class="link-primary" style="border: none; background: none; display: block; margin: auto;">
+        Sign Out
+    </button>
+</form>
+<!--end::Form-->
+
+
+
+
+                    </div>
+                    <!--end::Wrapper-->
+                </div>
+                <!--end::Content-->
+
+            </div>
+            <!--end::Body-->
+        </div>
+        <!--end::Authentication - Sign-in-->
+    </div>
+    <!--end::Main-->
+   
+
+</body>
+
+
+
+
 
 <script>
         $(document).ready(function () {
@@ -53,12 +118,15 @@
             
             if($("#Name").val().trim() == ""){
                 $("#namefeedback").html('<div data-field="Name" data-validator="notEmpty">Name is required </div>')
+                $("#kt_sign_in_submit").attr("disabled", true);
                 return false
             }
             else{
                 $("#namefeedback").html('')
+                $("#kt_sign_in_submit").attr("disabled", false);
+                return true;
             }
-            return returnVal
+            
         }
         function validate(){
             retNameVal =true
