--- a/ShopTemplate/Views/User/RegisterUser.cshtml
+++ b/ShopTemplate/Views/User/RegisterUser.cshtml
@@ -1,123 +1,189 @@
 ﻿@{
-    ViewData["Title"] = "Sign Up";
+    ViewData["Title"] = "Shopivana | Register";
     if (TempData.ContainsKey("errorMsg")) {
         if (TempData["errorMsg"].ToString() != "" ||  TempData["errorMsg"].ToString()!=null) {
             string errorMsg = TempData["errorMsg"].ToString();
-            @section scripts{
-                <script type="text/javascript">
-                    $("#validationSummary").attr('class','validation-summary-errors')
-                    $("#validationSummary").html('<p>@errorMsg</p>')
-                </script>
-            }
+    @section scripts{
+    <script type="text/javascript">
+                            $("#validationSummary").attr('class','validation-summary-errors')
+                            $("#validationSummary").html('<p>@errorMsg</p>')
+    </script>
+    }
             TempData.Remove("errorMsg");
         }
         
     }
 }
-
-<div>
+<body id="kt_body" class="bg-body">
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5SRRMXB" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+    <!--begin::Main-->
     <div class="d-flex flex-column flex-root" id="kt_body1">
+        <!--begin::Authentication - Sign-in -->
         <div class="d-flex flex-column flex-lg-row flex-column-fluid">
-            <div class="d-flex flex-column flex-lg-row-fluid py-10 gradient-bg" style="flex: 1 auto; min-width: 0;">
-                <div class="d-flex flex-center flex-column flex-column-fluid">
-                    <div class="w-lg-400px p-10 p-lg-10 mx-auto bg-white no-auth" style="border-radius: 8px;">
-                        <form class="form w-100 fv-plugins-bootstrap5 fv-plugins-framework" method="post" id="kt_sign_up_form" asp-action="RegisterUser">
-                            <div class="mb-5">
-                                <a href="https://shopivana.com" target="_blank" class="pb-10 d-block">
-                                    <img alt="Logo" src="https://app.shopivana.com/Content/images/logo_default_dark.png?1.0.2.4" class="h-60px">
-                                </a>
-                                <p class="text-dark mb-5 fs-1">Sign Up</p>
-                                <p class="text-gray-700 mb-0">Sign Up to Shopivana for free.</p>
-                            </div>
+            <!--begin::Aside-->
+            <div class="d-flex flex-column flex-lg-row-auto w-xl-600px positon-xl-relative d-none" style="background-color: #eef3f7;">
+                <!--begin::Wrapper-->
+                <div class="d-flex flex-column position-xl-fixed top-0 bottom-0 w-xl-600px scroll-y">
+                    <!--begin::Content-->
+                    <div class="d-flex flex-row-fluid flex-column text-center p-10 pt-lg-20">
+                        <!--begin::Logo-->
+                        <a href="https://shopivana.com" target="_blank" class="py-9 mb-5">
+                            <img alt="Logo" src="https://app.shopivana.com/Content/images/logo_default_dark.png?1.0.2.4" class="h-100px" />
+                        </a>
+                        <!--end::Logo-->
+                        <!--begin::Title-->
+                        <h1 class="fw-bolder fs-2qx pb-5 pb-md-10" style="color: #444;">Welcome to Shopivana</h1>
+                        <!--end::Title-->
 
-                            <div class="mb-5">
-                                <div class="validation-summary-valid" data-valmsg-summary="true" id="validationSummary">
-                                    <p style="display:none"></p>
-                                </div>
-                            </div>
-
-                            <div class="mb-5">
-                                <div class="mb-5 fv-plugins-icon-container">
-                                    <label class="position-relative w-100">
-                                        <input type="text" class="input__field no-auth-input" id="EmailId" name="EmailId" autocomplete="off" placeholder=" " readonly onfocus="$(this).removeAttr('readonly');" onblur="$(this).attr('readonly');" onchange="    return validateEmailField();"/>
-                                        <span class="input__label">Email Id</span>
-                                    </label>
-                                    <div class="fv-plugins-message-container invalid-feedback" id="emailfeedback">
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="mb-5">
-                                <div class="mb-5 fv-plugins-icon-container">
-                                    <label class="position-relative w-100">
-                                        <input type="password" class="input__field no-auth-input" id="Password" name="Password" autocomplete="off" placeholder=" " readonly onfocus="$(this).removeAttr('readonly');" onblur="$(this).attr('readonly');" onchange="    return validatePasswordField();"/>
-                                        <span class="input__label">Password</span>
-                                        <span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" onclick="showPassword(this)">
-                                            <i class="bi bi-eye-slash fs-5"></i>
-                                        </span>
-                                    </label>
-                                    <div class="fv-plugins-message-container invalid-feedback" id="passwordfeedback">
-
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="text-left">
-                                <button type="button" id="kt_sign_in_submit" class="btn btn-lg btn-primary w-100 my-4" onclick = "    return submitForm();">
-                                    <span class="indicator-label" id="continueButton">Continue</span>
-                                    <span class="indicator-progress" id ="spinnerSpan" >
-                                        Please wait...
-                                        <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
-                                    </span>
-                                </button>
-                                
-                            </div>
-                            <div class="text-center">
-                           <a asp-controller="User" asp-action="Login">Back to Login</a>
-                            </div>
-                        </form>
                     </div>
+                    <!--end::Content-->
+                    <!--begin::Illustration-->
+                    <div class="d-flex flex-row-auto bgi-no-repeat bgi-position-x-center bgi-size-contain bgi-position-y-bottom min-h-100px min-h-lg-350px" style="background-image: url('')"></div>
+                    <!--end::Illustration-->
                 </div>
+                <!--end::Wrapper-->
             </div>
+            <!--end::Aside-->
+            <!--begin::Body-->
+            <div class="d-flex flex-column flex-lg-row-fluid py-10 gradient-bg" style="flex: 1 auto; min-width: 0;">
+                <!--begin::Content-->
+                <div class="d-flex flex-center flex-column flex-column-fluid">
+                    <!--begin::Wrapper-->
+                    <div class="w-lg-400px p-10 p-lg-10 mx-auto bg-white no-auth" style="border-radius: 8px;width:90%;">
+                        
+
+
+    <!--begin::Form-->
+    <form class="form w-100" novalidate="novalidate" id="kt_sign_up_form" asp-action="RegisterUser" method="post">
+        <input name="__RequestVerificationToken" type="hidden" value="8-s8LGKSSS8FV0LDdchsNhrw_a_nBRVMbo3ggkE_guCUpOZ3g9eHoCbAypNH_gYpkk_uEUH4hqNDRKo-F40Kz_1LKzapfisn2WeQxRg13_U1" />
+        <input data-val="true" data-val-required="The Package field is required." id="PackageID" name="PackageID" type="hidden" value="103" />
+        <input data-val="true" data-val-number="The field Vendor Type must be a number." data-val-required="The Vendor Type field is required." id="VendorTypeID" name="VendorTypeID" type="hidden" value="-999" />
+        <input id="Country" name="Country" type="hidden" value="" />
+        <!--begin::Heading-->
+        <div class="mb-5">
+            <a href="https://shopivana.com" target="_blank" class="pb-10 d-block">
+                <img alt="Logo" src="https://app.shopivana.com/Content/images/logo_default_dark.png?1.0.2.4" class="h-60px">
+            </a>
+            <!--begin::Title-->
+            <p class="text-dark mb-5 fs-1">Sign Up</p>
+            <p class="text-gray-700 mb-0">Sign Up to Shopivana for free.</p>
+            <!--end::Title-->
         </div>
+       <div class="validation-summary-valid" data-valmsg-summary="true" id="validationSummary"><p ></p></div>
+        <!--end::Input group-->
+        <!--begin::Input group-->
+        <div class="fv-row mb-5">
+            <label class="position-relative w-100">
+                <input class="input__field no-auth-input" type="text" id="EmailId" name="EmailId" placeholder=" " autocomplete="off" readonly onfocus="$(this).removeAttr('readonly');" onblur="$(this).attr('readonly');" onchange="return validateEmailField();">
+                <span class="input__label">Email address</span>
+            </label>
+            <div class="fv-plugins-message-container invalid-feedback" style="display:none" id="emailfeedback">
+
+                                </div>
+        </div>
+        <div class="fv-row mb-5">
+            <!--begin::Input-->
+            <label class="position-relative w-100">
+                <input class="input__field no-auth-input" type="password" id="Password" name="Password" placeholder=" " autocomplete="off" readonly onfocus="$(this).removeAttr('readonly');" onblur="$(this).attr('readonly');" onchange="    return validatePasswordField();">
+                <span class="input__label">Password (8 or more characters)</span>
+                <span class="btn btn-sm btn-icon position-absolute translate-middle top-50 end-0 me-n2" onclick="showPassword(this)">
+                    <i class="bi bi-eye-slash fs-2"></i>
+                </span>
+            </label>
+            <div class="fv-plugins-message-container invalid-feedback" style="display:none" id="passwordfeedback">
+
+                                </div>
+            <!--end::Input-->
+        </div>
+        <!--end::Input group-->
+
+        <div class="text-left">
+            <button type="button" id="kt_sign_up_submit" class="btn btn-lg btn-primary w-100 mb-3" onclick = "    return submitForm();">
+                <span class="indicator-label">Continue</span>
+                <span class="indicator-progress">
+                    Please wait...
+                    <span class="spinner-border spinner-border-sm align-middle ms-2"></span>
+                </span>
+            </button>
+            Already have an account?
+            <a asp-controller="User" asp-action="Login" class="link-primary">Log in</a>
+        </div>       
+        <!--end::Actions-->
+    </form>
+    <!--end::Form-->    
+
+
+                    </div>
+                    <!--end::Wrapper-->
+                </div>
+                <!--end::Content-->
+
+            </div>
+            <!--end::Body-->
+        </div>
+        <!--end::Authentication - Sign-in-->
     </div>
-</div>
+    <!--end::Main-->
+   
+</body>
+
 
 <script>
         $(document).ready(function () {
             $("#EmailId").focus();
-            displayToggle("#spinnerSpan")
+            
         });
+
         function validateEmailField() {
+            startProcess("#kt_sign_up_submit");
             returnVal = true
             $("#validationSummary").attr('class','validation-summary-valid')
             $("#validationSummary").html('<p style="display:none"></p>')
             if($("#EmailId").val().trim() == ""){
                 $("#emailfeedback").html('<div data-field="Email" data-validator="notEmpty">Email address is required </div>')
+
+                $("#emailfeedback").attr('style',"")
                 return false
             }
             else{
                 valEmailVal = ValidateEmail($("#EmailId").val().trim())
                 if (valEmailVal == false) {
-                    $("#emailfeedback").html('<div data-field="Email" data-validator="notEmpty">Please enter a valid EmailId</div>')
+                    $("#emailfeedback").html('<div data-field="Email" data-validator="notEmpty">Please enter a valid Email Address</div>')
+                    $("#emailfeedback").attr('style',"")
                     return false
                 } else { 
                     $("#emailfeedback").html('')
+                    $("#emailfeedback").attr('style',"display:none")
                 }
             }
+            endProcess("#kt_sign_up_submit");
             var checkEmailFlag = checkIfEmailExist()
             
             return checkEmailFlag
         }
         function validatePasswordField() { 
+            startProcess("#kt_sign_up_submit");
             returnVal = true
             if($("#Password").val().trim() == ""){
                 $("#passwordfeedback").html ('<div data-field="Password" data-validator="notEmpty">Password is required </div>')
+                $("#passwordfeedback").attr('style',"")
                 returnVal=false
                 
             }
             else {
-                $("#passwordfeedback").html('')
+                if ($("#Password").val().trim().length < 8) {
+                    $("#passwordfeedback").html('<div data-field="Password" data-validator="notEmpty">Password Length can not be less than 8</div>');
+                    $("#passwordfeedback").attr('style', "")
+                    returnVal = false;
+                }
+                else {
+                    $("#passwordfeedback").html('')
+                    $("#passwordfeedback").attr('style',"display:none")
+                }
             }
+            endProcess("#kt_sign_up_submit");
             return returnVal
         }
 
@@ -132,45 +198,43 @@
         }
         function submitForm(){
             retVal = validate()
-            
+            startProcess("#kt_sign_up_submit");
             if(retVal==true){
                 $("#kt_sign_up_form").submit();
                 return true
             }
             else{
+                endProcess("#kt_sign_up_submit");
                 return false
             }
         }
        function checkIfEmailExist() {
            var returnVal = false
+           startProcess("#kt_sign_up_submit");
             if ($("#EmailId").val() !== "") {
                 $.ajax({
-                    url: '/User/CheckEmailExists',
+                    url: '/User/CheckEmailIsUnique',
                     type: 'POST',
                     async: false,
                     cache: false,
                     data: { EmailId: $("#EmailId").val() },
-                    beforeSend: function(){
-                         displayToggle("#spinnerSpan")
-                         displayToggle("#continueButton")
-
-                    },
-                    complete: function(){
-                        displayToggle("#spinnerSpan")
-                         displayToggle("#continueButton")
-                    },
+                    
                     success: function (returnData) {
                         console.log(returnData)
                         if(returnData.status) {
                             $("#emailfeedback").html('')
+                            endProcess("#kt_sign_up_submit");
+                            $("#emailfeedback").attr('style',"display :none")
                             returnVal = true
                         }
                         else {
+                            endProcess("#kt_sign_up_submit");
                             $("#emailfeedback").html('<div data-field="Email" data-validator="notEmpty">'+returnData.errorMsg+'</div>')
+                            $("#emailfeedback").attr('style',"")
                             
                         }
                     },
-                    error: function() { alert('Oops! Something went wrong'); }
+                    error: function() { alert('Oops! Something went wrong'); endProcess("#kt_sign_up_submit");}
                 });
             }
             
